style.css
/* ... */
.ashtwo.tag
{
	background: #777;
	color: #fff;
}

p > .ash
{
	font-size: 12px;
}

.post a {
	text-decoration: none;
}

.btn-primary:hover{
	color: #fff;
	background: #777;
}

.btn-primary:visited{
	color: #fff;
	background: #000;
}

.content > p {
	font-size:18px;
	line-height: 2;
}


.content .title{
	font-size: 33px;
	font-family: 'Myriad pro','Droid Sans';
	font-weight: bold;
	text-transform: capitalize;
	text-align: left;
	line-height: 1; 
	
}

.content .img-responsive{
	width : 100%;
	height: auto;
	
}

.img-responsive.profileimgtwo{
	height: 70px;
	width: 72px;
	float: left;
	margin-right: 10px;

}

div.body{

	display: block;
	font-family: Helvetica,'Helvetica Neue';
	font-size: 15px;
	line-height: 1.8;
	text-align: justify;
	padding: 20px;
	word-spacing: 2px;
	line-height: 2;


}

div.body strong {
	padding :10px;
}

.body p {

	padding-bottom: 10px;
}

.content {

	font-family: Helvetica,'Helvetica Neue';
	font-size: 18px;
	font-weight: lighter;
	line-height: 2;
	text-align: justify;
	

}



div.body > p:first-child:first-letter{
	text-transform: uppercase;
	font-family: Helvetica,'Helvetica Neue';
	font-size: 19px;
	font-weight: bold;
	margin: 0px;
}

div.body > p
{
	line-height: 2;
	font-size: 18px;
}

div.body h1{
	font-size: 36px;
	font-family: 'Myriad pro','Droid Sans';
}

div.body a {
	color: red;
}

.content a {
	color: red;
}




div.body:first-line {
	line-height: 1.6;
}

hr{
	height: 5px;
}

/*
.meta-post {
	border-top: 1px solid #e5e5e5; 
	border-bottom: 1px solid #e5e5e5; 
	padding:20px;
	}*/

	.post-meta {
		border-top: 2px solid #e5e5e5; 
		border-bottom: 2px solid #e5e5e5; 
		margin-left: 80px;
		padding: 10px; 
	}

	.nom {
		margin:0 0 0 0px;
		padding: 0px;
		line-height: 1.6;

	}

	.thumb-more
	{
		margin: 10px;
		padding:5px;
	}

	.thumb-more p {
		padding: 4px;
		font-size: 15px;
		margin: 0px;


	}
/*.thumb-more span {
	padding: 15px;
	
	
	}*/

	.thumb-more-row{
		margin-top:30px;
		margin-bottom: 100px;
		padding-left: 10px;
		margin-left:30px; 

	}

	.before-thumb-more-row{
		padding-left: 10px;
		margin-top:30px;
		margin-left:30px;

	}

	.thumb-more > a > .img-responsive {
		float: left;
		width: 110px;
		height:100px;
	}

	.thumb-more > a:visited {
		text-decoration: none;
	}

	.square {
		width: 75px;
		height: 71px;
		color: #fff;
		background: #000;
		text-transform: uppercase;
		padding:20px;
		float: left;
		margin-right: 20px;

	}


	.circle
	{
		width:100px;
		height:100px;
		border-radius:50%;
		font-size:20px;
		color:#fff;
		text-align:center;
		background:#000;

	}

	.thumb-more > a > .circle{
		width: 100px;
		height:100px;
		float: left;
		padding: 30px;
		text-transform: uppercase;
	}

	.prev-next-links{
		padding: 10px;
		width: 100%;
		text-transform: uppercase;
		margin-top:30px;
		margin-left:10px; 
	}

	.prev-next-links > .prev {
		/*float:left;*/

	}

	.prev-next-links > .next > p {
		float:right;

	}

	.prev-next-links a {
		text-decoration: none;
		color: #000;
	}

	.prev-next-links a:hover {
		font-weight: lighter;
		color: red;
		text-decoration: none;
	}
	.prev-next-links a:visited {

		color: #000;
		text-decoration: none;
	}


	.search {
		margin-bottom: 10px;
	}

	.search img {
		width: 150px;
		height: 150px;
		margin: auto;
	}

	.search p {
		font-size: 25px;
		font-family: Helvetica,'Helvetica Neue';

	}

	.search > p >span {
		font-weight: bold;

	}

	.prev-next-container {

		padding-left: 0px;

	}


	.result{
		border: 1px solid #777;
		padding-right: 10px;
		margin:30px;
		height: auto;
	}

	.result > a > img {
		float:left;
		height: auto;
		width: 75px;
		height: 71px;
		margin-right:20px; 
	}

	.result > a:active
	{
		text-decoration: none;
	}
	.result > a:link
	{
		font-weight: light;
		text-decoration: none;
	}

	.result > a:hover
	{
		font-weight: normal;
		text-decoration: none;
	}

	.result > a > p
	{
		font-size: 12px;
		font-weight: lighter;
		padding: 5px;
	}



	.result > .s_ptitle {
		font-size: 17px;


	}

	.result > .s_ppreview {
		margin-left:20px;

	}

	.pagination > li > a{
		color:#000;
	}

	.pagination > li > a:active{
		color:#000;
	}
	.pagination > li > a:hover{
		color:#000;
	}
	.pagination > li > a:visited{
		color:#000;
	}





	.page-header{
		padding:0px;
		margin: 0px;
		border: none;


	}

	.container .jumbotron, .container-fluid .jumbotron {
    padding-right: 0px;
    padding-left: 0px;
}




	.page-header .btn-primary, .page-header .btn-primary:visited, .page-header .btn-primary:hover{
		margin-top: -40px;
		padding:2px;
		padding-left: 15px;
		padding-right: 15px;
		font-family: 'Myriad pro','Droid Sans';
		font-size: 30px;
		font-weight: lighter;
		background: #000;
		color: #fff;
		border: 1px solid #000;
		text-transform: uppercase;
		margin-left: -5%;
		cursor:default;

	}



	.page-header img {
		height: 50%;
		width: 100%;
		opacity:1;

		width: 100%;
		height:400px;

	/*
	margin-left:25%;
	margin-right:30%;*/
}


.effect-over
{

	background: rgba(0,0,0,0.7);
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 9999;
	
}

/*.page-header-heading{
	margin-left:30px;
	font-size: 70px;
	font-family: 'Myriad pro','Droid Sans';
	font-weight: bold;

	color: #fff;
	text-transform: uppercase;
	text-align: center;
	padding-bottom: 0px;


	}*/






	#wpadminbar{
		margin-top:50px;
	}







	/* Styles for POST Images */

	img.aligncenter {
		display: block;
		width: 400px;
		height:auto;
		margin-left: auto;
		margin-right: auto;


	}
	img.alignleft {
		float: left;
		width: 400px;
		height: auto;
		margin: 10px;

	}
	img.alignright {
		float: right;
		width: 400px;
		height: auto;
		margin: 10px;

	}
	img.alignnone{
		float: left;
		width: 400px;
		height: auto;
		margin: 10px;

	}

	#containah {
		border: 2px dashed #444;
		height: 125px;

		text-align: justify;
		-ms-text-justify: distribute-all-lines;
		text-justify: distribute-all-lines;
	}


	.big-form.navbar-form .input-group > .form-control{
		width:500px;
		height:50px;



	}
/* ... */

